--- a/index.html
+++ b/index.html
@@ -51,19 +51,46 @@
 				<h2>SCENE</h2>
 				<ul>
 					<li>
-						<a href="">
+						<a href="#">
 							<img src="" alt="">
-							<p></p>
+							<p>123456</p>
 						</a>
 					</li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ul>
+					<li>
+						<a href="#">
+							<img src="" alt="">
+							<p>123456</p>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="" alt="">
+							<p>123456</p>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="" alt="">
+							<p>123456</p>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="" alt="">
+							<p>123456</p>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="" alt="">
+							<p>123456</p>
+						</a>
+					</li>
+				</ul> 
 			</div>
-			<div class="news"></div>
+			<div class="news">
+				<h2>NEWS</h2>
+			</div>
 			<div class="picSlide"></div>
 			<div class="about"></div>
 		</section>	
