--- a/index.html
+++ b/index.html
@@ -52,37 +52,37 @@
 				<ul>
 					<li>
 						<a href="#">
-							<img src="" alt="">
+							<img src="img/pic1.jpg" alt="">
 							<p>123456</p>
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="" alt="">
+							<img src="img/pic1.jpg" alt="">
 							<p>123456</p>
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="" alt="">
+							<img src="img/pic1.jpg" alt="">
 							<p>123456</p>
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="" alt="">
+							<img src="img/pic1.jpg" alt="">
 							<p>123456</p>
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="" alt="">
+							<img src="img/pic1.jpg" alt="">
 							<p>123456</p>
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="" alt="">
+							<img src="img/pic1.jpg" alt="">
 							<p>123456</p>
 						</a>
 					</li>
@@ -90,8 +90,50 @@
 			</div>
 			<div class="news">
 				<h2>NEWS</h2>
+				<div class="newsDiv">
+					<div class="newsWord">
+						<div>
+							<span>2020.04.16</span>
+							<p>Category</p>
+						</div>
+						<p>Lorem ipsum dolor sit amet</p>
+					</div>
+					<div class="newsWord">
+						<div>
+							<span>2020.02.26</span>
+							<p>Category</p>
+						</div>
+						<p>Lorem ipsum dolor sit amet totam nihil.</p>
+					</div>
+					<div class="newsWord">
+						<div>
+							<span>2020.02.16</span>
+							<p>Category</p>
+						</div>
+						<p>Lorem ipsum dolor sit ametmus atque ipsam veritatis!</p>
+					</div>
+					<div class="newsWord">
+						<div>
+							<span>2020.01.18</span>
+							<p>Category</p>
+						</div>
+						<p>Lorem ipsum dolor sit amet officia dolor?</p>
+					</div>
+					<div class="newsWord">
+						<div>
+							<span>2019.12.23</span>
+							<p>Category</p>
+						</div>
+						<p>Lorem ipsum dolor sit ameti.</p>
+					</div>
+				</div>
 			</div>
-			<div class="picSlide"></div>
+			<div class="slide">
+				<div class="picSlide">
+					<div><img src="img/img1.jpg" alt=""></div>
+					<div><img src="img/img2.jpg" alt=""></div>
+				</div>
+			</div>
 			<div class="about"></div>
 		</section>	
 
