--- a/index.html
+++ b/index.html
@@ -136,7 +136,32 @@
 			</div>
 			<div class="about"></div>
 		</section>	
-
+		
+		<footer>
+			<div class="footBox">
+				<div class="contact">
+					<h2>CONTACT</h2>
+					<p>Lorem ipsum dolor quibusdam hic natus incidunt quo magnam nobis aliquam.</p>
+					<div class="contactForm">
+						<a href="#">CONTACT FORM</a>
+					</div>
+				</div>
+				<div class="footInfo">
+					<div class="footLink">
+						<div class="linkItem">
+							<p><a href="#">事業分野</a></p>
+							<ul>
+								<li><a href="#">123</a></li>
+								<li><a href="#">123</a></li>
+								<li><a href="#">123</a></li>
+							</ul>
+						</div>
+					</div>
+					<p>©2020</p>
+				</div>
+				<div class="scrollUp"></div>
+			</div>
+		</footer>
 
 
 	</div>
