--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	<title>FUYU SKI</title>
 
 	<link rel="stylesheet" href="fuyuski.css">
+	<link href="https://fonts.googleapis.com/css2?family=Vidaloka&display=swap" rel="stylesheet"> 
 </head>
 <body >
 	<div id="container">
 		<header>
-			<div>
+			<div id="logo">
 				<h1><a href="#">FUYU SKI</a></h1>
 			</div>
 			<div class="menuBox">
@@ -53,37 +54,37 @@
 					<li>
 						<a href="#">
 							<img src="img/pic1.jpg" alt="">
-							<p>123456</p>
+							<p>Dtgep</p>
 						</a>
 					</li>
 					<li>
 						<a href="#">
 							<img src="img/pic1.jpg" alt="">
-							<p>123456</p>
+							<p>Femgh</p>
 						</a>
 					</li>
 					<li>
 						<a href="#">
 							<img src="img/pic1.jpg" alt="">
-							<p>123456</p>
+							<p>Bfosasdf</p>
 						</a>
 					</li>
 					<li>
 						<a href="#">
 							<img src="img/pic1.jpg" alt="">
-							<p>123456</p>
+							<p>Nswfead</p>
 						</a>
 					</li>
 					<li>
 						<a href="#">
 							<img src="img/pic1.jpg" alt="">
-							<p>123456</p>
+							<p>Gsaeafd</p>
 						</a>
 					</li>
 					<li>
 						<a href="#">
 							<img src="img/pic1.jpg" alt="">
-							<p>123456</p>
+							<p>Meadwdug</p>
 						</a>
 					</li>
 				</ul> 
@@ -149,16 +150,41 @@
 				<div class="footInfo">
 					<div class="footLink">
 						<div class="linkItem">
-							<p><a href="#">事業分野</a></p>
+							<p><a href="#">Demovo</a></p>
 							<ul>
-								<li><a href="#">123</a></li>
-								<li><a href="#">123</a></li>
-								<li><a href="#">123</a></li>
+								<li><a href="#">dffgv</a></li>
+								<li><a href="#">eoivnnop</a></li>
+								<li><a href="#">gvojowe</a></li>
+							</ul>
+						</div>
+						<div class="linkItem">
+							<p><a href="#">Demovo</a></p>
+							<ul>
+								<li><a href="#">grdsv</a></li>
+								<li><a href="#">feaasf</a></li>
+								<li><a href="#">brewwd</a></li>
+							</ul>
+						</div>
+						<div class="linkItem">
+							<p><a href="#">Demovo</a></p>
+							<ul>
+								<li><a href="#">fasf</a></li>
+								<li><a href="#">hrwd vvvda</a></li>
+								<li><a href="#">vedaq ewqge</a></li>
+							</ul>
+						</div>
+						<div class="linkItem">
+							<p><a href="#">Demovo</a></p>
+							<ul>
+								<li><a href="#">dffgv</a></li>
+								<li><a href="#">eoivnnop</a></li>
+								<li><a href="#">gvojowe</a></li>
 							</ul>
 						</div>
 					</div>
-					<p>©2020</p>
+					
 				</div>
+				<p id="copyright">© 2020 FUYU SKI All rights Reserved.</p>
 				<div class="scrollUp"></div>
 			</div>
 		</footer>
